# srcsim

./: LICENSE  Plot.ipynb  README.md  aux.py  aux_observation.py  get_runs.py  project.toml  pyproject.toml  sim_in_box.py  sim_in_box.yaml  sim_run.py  simulation.py  source.py
examples/: sim_in_box.yaml
notebooks/: data-run-testing.ipynb  run_example.yaml
src/srcsim/: mc.py  off.py  run.py  rungen.py  src.py
src/srcsim/gpy/: irf.py
src/srcsim/gpy/run/: base.py  fixed.py  makers.py  simulate.py  sky.py
src/srcsim/gpy/rungen/: __init__.py  fixed.py  generator.py  helpers.py  sky.py
src/srcsim/gpy/scripts/: sim_dl3.py
src/srcsim/magic/mc/: __init__.py  events.py  file.py  info.py
src/srcsim/run/: __init__.py  base.py  fixed.py  generator.py  sky.py
src/srcsim/rungen/: __init__.py  fixed.py  generator.py  helpers.py  sky.py
src/srcsim/scripts/: get_runs.py  magic_to_dl2.py  sim_run.py
srcsim/: mc.py  off.py  run.py  rungen.py  spec.py  src.py
